--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>臺北YouBike2.0站點狀態查詢</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+TC&display=swap"
@@ -26,7 +26,7 @@
             </p>
             <div class="mt-3 mb-3">
                 <div class="mb-3">
-                    <h2 class="fw-bold">查詢</h2>
+                    <h2 class="fw-bold mb-3">查詢站點狀態</h2>
                     <label class="fw-bold form-label" for="area">區域名稱</label>
                     <select name="area" id="area">
                         <option value="">全部</option>
