--- a/index.html
+++ b/index.html
@@ -9,58 +9,87 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+TC&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="stylesheets/all.css">
 
 </head>
 
-<body>
-    <header>
-        <h1 class="text-center fw-bold py-3 bg-info text-white">😎超陽春o臺北市<br
+<body style="background-image: url(./images/lightpaperfibers.png);">
+    <header class="bg-info" id="header">
+        <h1 data-aos="fade-down" class="text-center fw-bold py-3  text-white mb-0">😎超陽春o臺北市<br
                 class="d-block d-lg-none">YouBike2.0租借站點查詢🤬
         </h1>
-
-        <section class="container">
-            <p class="mt-3 mb-0">版本1.0</p>
-            <p class="mb-0">之後會串接Google Map的API，<br>時間不確定，在那之前給我自己自己複製地址導航閉嘴。</p>
-            <p class="fw-bold text-danger">提醒：資料更新頻率為每分鐘更新一次
-            </p>
-            <div class="mt-3 mb-3">
-                <div class="mb-3">
-                    <h2 class="fw-bold mb-3">查詢站點狀態</h2>
-                    <label class="fw-bold form-label" for="area">區域名稱</label>
-                    <select name="area" id="area">
-                        <option value="">全部</option>
-                        <option value="松山區">松山區</option>
-                        <option value="信義區">信義區</option>
-                        <option value="大安區">大安區</option>
-                        <option value="中山區">中山區</option>
-                        <option value="中正區">中正區</option>
-                        <option value="大同區">大同區</option>
-                        <option value="萬華區">萬華區</option>
-                        <option value="文山區">文山區</option>
-                        <option value="南港區">南港區</option>
-                        <option value="臺大公館校區">臺大公館校區</option>
-                    </select>
-                </div>
-                <div class="row">
-                    <div class="d-flex">
-                        <label class="fw-bold form-label align-self-center" for="search">輸入搜尋</label>
-                        <input class="ms-2 searchInput form-control w-50" type="text" placeholder="請輸入地址或站名"
-                            name="search" id="search">
-                        <input id="searchBtn" class="ms-2 btn btn-info text-white fw-bold" type="button" value="搜尋站點">
-                    </div>
-                </div>
-            </div>
-            <div class="list list-unstyled text-center mx-5">
-                <ul style="height: 100px;" class=" overflow-hidden"></ul>
-            </div>
-        </section>
     </header>
+
+    <section class="bg-dark py-3">
+        <div class="container">
+            <p class="mb-0 text-white">版本1.01</p>
+            <p class="mb-0 text-white">1. UI更新，下滑時彈出回到頁頂按鈕、部分美化(?、新增看起來髒髒的背景<br>2.
+                輸入搜尋移除搜尋按鈕，輸入完按手機鍵盤完成或電腦鍵盤Enter即會顯示結果<br>3.
+                新增顯示當前租借站數量<br>4.
+                新增捷運站篩選功能，顯示捷運站各出口站點</p>
+            <p class="fw-bold text-warning">提醒：資料更新頻率為每分鐘更新一次
+            </p>
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="mt-3 mb-3">
+            <div class="mb-3 flex-column">
+                <h2 class="fw-bold mb-3">查詢站點狀態</h2>
+                <label class="fw-bold form-label" for="area"><i
+                        class="text-info fw-bold fs-3 bi bi-globe-asia-australia me-1"></i>區域搜尋</label>
+                <select class="rounded-4 text-center" name="area" id="area">
+                    <option value="">全部</option>
+                    <option value="松山區">松山區</option>
+                    <option value="信義區">信義區</option>
+                    <option value="大安區">大安區</option>
+                    <option value="中山區">中山區</option>
+                    <option value="中正區">中正區</option>
+                    <option value="大同區">大同區</option>
+                    <option value="萬華區">萬華區</option>
+                    <option value="文山區">文山區</option>
+                    <option value="南港區">南港區</option>
+                    <option value="臺大公館校區">臺大公館校區</option>
+                </select>
+            </div>
+            <div class="mb-3 flex-column">
+                <label class="fw-bold form-label" for="mrt"><i
+                        class="text-info fw-bold fs-3 bi bi-train-freight-front me-1"></i>捷運站搜尋</label>
+                <select class="rounded-4 text-center" name="mrt" id="mrt">
+
+                </select>
+            </div>
+            <div class="d-flex mb-3">
+                <label class="fw-bold form-label align-self-center jcc" for="search"><i
+                        class="text-info fw-bold fs-3 bi bi-search me-1"></i>輸入搜尋</label>
+                <input class="ms-2 searchInput form-control w-50 rounded-5" type="text" placeholder="請輸入部分地址或站名"
+                    name="search" id="search">
+                <!-- <input id="searchBtn" class="ms-2 btn btn-info text-white fw-bold" type="button" value="搜尋站點"> -->
+            </div>
+            <p class="countData text-secondary opacity-75 text-end text-lg-start pe-5 mb-0"></p>
+        </div>
+        <div class="text-center mx-5">
+            <ul class="list list-unstyled row row-cols-1 row-cols-lg-3"></ul>
+        </div>
+    </section>
+
+    <section data-aos="fade-down" class="fixed-bottom me-3 me-lg-5">
+        <a class="heartbeat link-info link-underline-opacity-0 fw-bold position-absolute bottom-0 end-0 d-flex flex-column align-items-center"
+            href="#header"><i class="display-1 bi bi-arrow-up-square-fill text-info"></i><span
+                class="bg-info text-white rounded-3 d-none d-lg-block px-3 mb-3">Back to top</span></a>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="Javascript/all.js"></script>
 </body>
 
