--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <section class="bg-dark py-3">
         <div class="container">
             <p class="mb-0 text-white">版本1.01</p>
-            <p class="mb-0 text-white">1. UI更新，下滑時彈出回到頁頂按鈕、部分美化(?、新增看起來髒髒的背景<br>2.
+            <p class="mb-0 text-white lh-lg">1. UI更新，下滑時彈出回到頁頂按鈕、部分美化(?、新增看起來髒髒的背景<br>2.
                 輸入搜尋移除搜尋按鈕，輸入完按手機鍵盤完成或電腦鍵盤Enter即會顯示結果<br>3.
                 新增顯示當前租借站數量<br>4.
-                新增捷運站篩選功能，顯示捷運站各出口站點</p>
-            <p class="fw-bold text-warning">提醒：資料更新頻率為每分鐘更新一次
+                新增捷運站篩選功能，顯示捷運站各出口站點<br>5. 吃了炸雞順便撸了幾下的貓</p>
+            <p class="fw-bold text-warning mb-0 mt-2">提醒：資料更新頻率為每分鐘更新一次<br>資料取自政府開放資料平台
             </p>
         </div>
     </section>
@@ -77,9 +77,13 @@
 
     <section data-aos="fade-down" class="fixed-bottom me-3 me-lg-5">
         <a class="heartbeat link-info link-underline-opacity-0 fw-bold position-absolute bottom-0 end-0 d-flex flex-column align-items-center"
-            href="#header"><i class="display-1 bi bi-arrow-up-square-fill text-info"></i><span
+            href="#header"><i class="display-1 bi bi-arrow-up-square-fill text-warning"></i><span
                 class="bg-info text-white rounded-3 d-none d-lg-block px-3 mb-3">Back to top</span></a>
     </section>
+
+    <footer class="bg-info text-white text-center mb-0 py-5 px-5">
+        <p class="h3 fw-bold mb-0 lh-lg">Copyright© 2023 Royen <br>版權所有</p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
