--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 <body style="background-image: url(./images/lightpaperfibers.png);">
     <header class="bg-info" id="header">
-        <h1 data-aos="fade-down" class="text-center fw-bold py-3  text-white mb-0">😎超陽春o臺北市<br
-                class="d-block d-lg-none">YouBike2.0租借站點查詢🤬
+        <h1 data-aos="fade-down" class="text-center fw-bold py-3 py-lg-4 text-white mb-0"><i
+                class="bi bi-bicycle fw-bold"></i>
+            臺北市YouBike2.0<br class="d-block d-lg-none">租借站點查詢
         </h1>
     </header>
 
@@ -82,9 +83,8 @@
     </section>
 
     <footer class="bg-info text-white text-center mb-0 py-5 px-5">
-        <p class="h3 fw-bold mb-0 lh-lg">Copyright© 2023 Royen <br>版權所有</p>
+        <p class="h3 fw-bold mb-0 lh-lg">Copyright© 2023 Royen</p>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
