增加站點icon顯示

--- a/map.html
+++ b/map.html
@@ -41,6 +41,22 @@
     </section>
 
     <section>
+        <div class="container">
+            <div class="d-flex justify-content-start py-4">
+                <img class="img-fluid"
+                    src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-black.png"
+                    alt="">
+                <p class="align-self-center mb-0 ms-1">黑色Icon為該站點目前無車位可歸還</p>
+                <img class="img-fluid ms-4"
+                    src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png"
+                    alt="">
+                <p class="align-self-center mb-0 ms-1">綠色Icon為該站點目前接受歸還及租借</p>
+                <img class="img-fluid ms-4"
+                    src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-grey.png"
+                    alt="">
+                <p class="align-self-center mb-0 ms-1">灰色Icon為該站點目前無車輛可租借</p>
+            </div>
+        </div>
         <div id="map"></div>
     </section>
 
