--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <p class="countData text-secondary opacity-75 text-end text-lg-start pe-5 mb-0"></p>
         </div>
-        <ul class="list list-unstyled row row-cols-1 row-cols-lg-3 text-center mx-5">
+        <div class="bikeList row row-cols-1 row-cols-lg-3 text-center mx-3 mx-lg-0">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 style="margin: auto; display: block;" width="200px" height="200px" viewBox="0 0 100 100"
                 preserveAspectRatio="xMidYMid">
@@ -111,7 +111,7 @@
                     </path>
                 </g>
             </svg>
-        </ul>
+        </div>
     </section>
 
     <section data-aos="fade-down" class="fixed-bottom me-3 me-lg-5">
