--- a/map.html
+++ b/map.html
@@ -47,19 +47,19 @@
                     <img class="img-fluid"
                         src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-black.png"
                         alt="">
-                    <p class="align-self-center mb-0 ms-1">黑色Icon為該站點目前無車位可歸還</p>
+                    <p class="align-self-center mb-0 ms-1">該站點目前無車位可歸還</p>
                 </div>
                 <div class="d-flex mt-2 mt-lg-0">
                     <img class="img-fluid"
                         src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png"
                         alt="">
-                    <p class="align-self-center mb-0 ms-1">綠色Icon為該站點目前接受歸還及租借</p>
+                    <p class="align-self-center mb-0 ms-1">該站點目前接受歸還及租借</p>
                 </div>
                 <div class="d-flex mt-2 mt-lg-0">
                     <img class="img-fluid"
                         src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-grey.png"
                         alt="">
-                    <p class="align-self-center mb-0 ms-1">灰色Icon為該站點目前無車輛可租借</p>
+                    <p class="align-self-center mb-0 ms-1">該站點目前無車輛可租借</p>
                 </div>
             </div>
         </div>
