--- a/html/map.html
+++ b/html/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
     <meta charset="UTF-8">
@@ -31,11 +31,8 @@
         <headers>
             <a href="index.html" class="btn btn-warning text-white rounded-4 fw-bold">點我返回首頁</a><br>
         </headers>
-        <bike-map>
-        </bike-map>
-        <footers>
-
-        </footers>
+        <bike-map></bike-map>
+        <footers></footers>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
